Prepare for production deployment